# AgeingAnalysis

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  31.05.2024vs01.06.2022.json  CHANGELOG.md  CONFIG_GENERATOR_USAGE.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  LICENSE  MIGRATION_GUIDE.md  MODULE_SETUP_SUMMARY.md  Makefile  README.md  README_SEMANTIC_RELEASE.md  USAGE.md  config.json  config_debug.json  example_config.json  integrated_cfd_rate.parquet  integrated_charge_config.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_ageing_analysis.py  setup.py  test_cfd.py  test_importlib_resources.py  test_module.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docs.yml  release.yml
ageing_analysis/: __init__.py  main.py
ageing_analysis/config/: __init__.py  settings.py
ageing_analysis/entities/: __init__.py  channel.py  config.py  dataset.py  module.py
ageing_analysis/gui/: __init__.py  ageing_visualization_window.py  config_generator_widget.py  control_server_logs_loader_window.py  grid_visualization_tab.py  integrated_charge_progress_window.py  plotting_widget.py  progress_window.py  range_correction_loader_window.py  time_series_tab.py
ageing_analysis/services/: __init__.py  ageing_calculator.py  cfd_rate_integration_service.py  config_manager.py  control_server_logs_service.py  darma_api_service.py  data_normalizer.py  data_parser.py  gaussian_fit.py  grid_visualization_service.py  integrated_charge_service.py  range_correction_configuration_parser.py  range_correction_service.py  reference_channel.py
ageing_analysis/utils/: __init__.py  file_utils.py  normalization.py  save_results.py  validation.py
ageing_analysis/utils/da_batch_client/: DA_batch_client.py  README.md  __init__.py
docs/: conf.py  index.md
old/: ageing_analysis.py  ageing_plot.py  ageing_visualization.py  ageing_visualization_tkinter.py
old/ageing/: __init__.py
old/ageing/entities/: __init__.py  channel.py  config.py  dataset.py  module.py
old/ageing/services/: __init__.py  ageing_calculator.py  data_normalizer.py  data_parser.py  gaussian_fit.py  reference_channel.py
old/ageing_analysis/: __init__.py  main.py
scripts/: update_version.py
storage/cfd_rate/: integrated_cfd_rate.parquet
storage/configuration_loads/: configuration_loads.parquet
storage/range_correction/: range_corrections.parquet
storage/range_correction/mappings/: FT0.json
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ageing_calculator_integration.py  test_app_integration.py  test_data_parser_integration.py
tests/unit/: __init__.py  test_module_basics.py
tests/unit/entities/: __init__.py  test_channel_integrated_charge.py  test_config_integrated_charge.py  test_config_integrated_charge_validation.py  test_config_isolated.py  test_config_save_functionality.py  test_dataset_integrated_charge.py
tests/unit/services/: __init__.py  test_ageing_calculator.py  test_cfd_rate_integration_service.py  test_darma_api_service.py  test_data_parser.py  test_gaussian_fit.py  test_grid_visualization_service.py  test_integrated_charge_service.py
tests/unit/utils/: test_save_results.py  test_validation.py
